gitops/manifests/network-policies/allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-ingress
  namespace: springboot

spec:

  podSelector:
    matchLabels:
      app: springboot

  policyTypes:
    - Ingress

  ingress:

    - from:

        - namespaceSelector:
            matchLabels:
                kubernetes.io/metadata.name: kube-system

    - from:

        - namespaceSelector:
            matchLabels:
                kubernetes.io/metadata.name: springboot

    - from:

        - namespaceSelector:
            matchLabels:
                kubernetes.io/metadata.name: monitoring
