gitops/manifests/network-policies/allow-istiod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-istiod
  namespace: springboot

spec:

  podSelector: {}

  egress:

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system

          podSelector:
            matchLabels:
              app: istiod

  policyTypes:
    - Egress
