gitops/manifests/network-policies/allow-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-monitoring
  namespace: springboot

spec:

  podSelector: {}

  policyTypes:
    - Egress

  egress:

    - to:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring

    - to:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: loki

    - to:

        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tempo
